Fixed wrapping labels, simplified label CSS

--- a/styles/_settings.scss
+++ b/styles/_settings.scss
@@ -1,10 +1,3 @@
-#gga-settings.gga {
-  .form-fields > * {
-    flex: 0 1 auto;
-    width: fit-content;
-  }
-}
-
 .gga .gga-settings {
   display: flex;
   flex-direction: column;
@@ -13,19 +6,21 @@
 
   .settings-list {
     .form-group {
-      gap: 0;
-    }
-
-    & > div {
       padding: 0.5rem;
     }
 
+    .form-fields {
+      flex: 1;
+
+      & > * {
+        flex: 0 1 auto;
+        width: fit-content;
+      }
+    }
+
     label {
-      display: inline-flex;
-      align-items: start;
-      justify-content: space-between;
-      width: 100%;
-      font-weight: bold;
+      flex: 1;
+      line-height: normal;
 
       &::before,
       &::after {
@@ -53,4 +48,3 @@
 .theme-dark .gga-settings .settings-list > div:nth-child(odd) {
   background-color: rgb(255, 255, 255, 5%);
 }
-
